--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
     name: "halloween";
     default: false;
     prefersdark: false;
-    color-scheme: "dark";
+    color-scheme: "light";
     --color-base-100: oklch(21% 0.006 56.043);
     --color-base-200: oklch(14% 0.004 49.25);
     --color-base-300: oklch(0% 0 0);
